# vision-camera-movenet-lite

./: README.md  VisionCameraPosePlugin.mm  index.ts  package.json
cpp/: CMakeLists.txt  VisionCameraPosePluginModule.cpp
ios/: CMakeLists.txt  VisionCameraMovenetLite.m  VisionCameraMovenetLiteFrameProcessor.swift  VisionCameraPosePlugin.mm
